# OmniDM

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MONETIZATION.md  README.md  SECURITY.md  SUPPORT.md  SUPPORTED_VERSIONS.md  capacitor.config.ts  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
capacitor/: README.md  webview-check.mjs
content-packs/: frontier-outpost.pack.json
docs/: ARCHIVED_INTEGRATIONS.md  BROWSER_TESTING.md  DEPLOYMENT.md  MIGRATION.md  RELEASE_GUIDE.md  SUPPORT_MATRIX.md  THREAT_MODEL.md
electron/: main.cjs  webview-check.mjs
scripts/: build-web.mjs  bundle-rules.mjs  gen-icons.mjs
src/: config.ts  index.ts  smoke.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json  webview-check.mjs
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icons.mjs  icon.icns
src-tauri/src/: lib.rs  main.rs
src/adapters/: cli.ts  discord.ts  matrix.ts  mattermost.ts  slack.ts  web.ts
src/browser/: engine-entry.ts  local-engine.ts  native-http.ts
src/core/: bot.ts  portraits.ts  types.ts
src/core/billing/: handler.ts  purchase-store.ts  store-node.ts  (+1 more)
src/providers/: anthropic.ts  concurrency-limited.ts  factory.ts  index.ts  openai-compatible.ts
src/smoke/: context.ts  harness.ts  node-test.ts  sections.ts
web/: app.js  engine.bundle.js  index.html  landing.html  portraits.js  style.css  transport.js
(+34 files in other folders)
